added Dasbaord APIs, Tested Students, Added PaymentAPIs
